--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,19 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f9fa;
+    background-image: url('/static/brooke-lark-wMzx2nBdeng-unsplash.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 h1 {
-    background-color: #343a40;
+    background-color: rgba(52, 58, 64, 0.7);
     color: #ffffff;
     padding: 20px;
+    text-align: center;
+    font-weight: 300;
 }
 
 #ingredients-form {
@@ -23,6 +28,7 @@ button {
     margin: 0 10px;
     cursor: pointer;
     font-size: 14px;
+    font-weight: 300;
 }
 
 button:hover {
@@ -36,11 +42,12 @@ button:hover {
 .recipe {
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #ced4da;
+    border: 1px solid rgba(206, 212, 218, 0.7);
     border-radius: 5px;
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.7);
     position: relative;
     animation: fadeIn 1s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 @keyframes fadeIn {
@@ -55,5 +62,7 @@ button:hover {
 .container {
     max-width: 800px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 20px;
+    box-sizing: border-box;
 }
+
