--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe App</title>
+    <title>RecipeGenius</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <style>
@@ -117,7 +117,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Recipe App</h1>
+        <h1>RecipeGenius</h1>
         <p>Enter ingredients:</p>
         <div id="ingredients-form">
             <input type="text" class="ingredient">
