--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
                 <li><a href="{{ url_for('register') }}">Sign Up</a></li>
             {% endif %}
                 <li><a href="{{ url_for('post_recipe') }}">Post a Recipe</a></li>
+            {% block extra_nav %}{% endblock %}
         </ul>
     </nav>
     <div class="container">
