--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,3 +68,28 @@ button:hover {
     box-sizing: border-box;
 }
 
+nav {
+    display: flex;
+    justify-content: flex-end;
+    padding: 1rem;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    display: inline;
+    margin-left: 1rem;
+}
+
+nav a {
+    text-decoration: none;
+    color: #000;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
